# quantaalpha_fix

./: .gitignore  README.md  README_CN.md  launcher.py  pyproject.toml  reproduce_issue.py  requirements.txt  results_rand10.json  results_rand10_v2.json  results_rand10_v2_useqlibdata.json  run.sh  single_factor_ic_qlib_result.json
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  question.md
configs/: .env.example  backtest.yaml  experiment.yaml
docs/: PROJECT_STRUCTURE.md  conf.py  experiment_guide.md  experiment_hyperparameters.md  index.rst  user_guide.md
frontend-v2/backend/: app.py
frontend-v2/src/: App.tsx
frontend-v2/src/components/: ChatInput.tsx  ExecutionPanel.tsx  FactorList.tsx  (+3 more)
quantaalpha/: cli.py
quantaalpha/backtest/: README.md  __init__.py  custom_factor_calculator.py  factor_calculator.py  factor_loader.py  run_backtest.py  runner.py  single_factor_ic_qlib.py  single_factor_ic_tool.py
quantaalpha/core/: conf.py  developer.py  evaluation.py  evolving_agent.py  evolving_framework.py  experiment.py  knowledge_base.py  proposal.py  scenario.py  utils.py
quantaalpha/factors/: experiment.py  feedback.py  library.py  proposal.py  qlib_coder.py  qlib_experiment_init.py  qlib_utils.py  runner.py  workspace.py
quantaalpha/llm/: __init__.py  client.py  config.py
quantaalpha/log/: __init__.py  time.py
quantaalpha/pipeline/: base.py  factor_backtest.py  factor_from_report.py  factor_mining.py  loop.py  planning.py  settings.py
quantaalpha/utils/: __init__.py  env.py  workflow.py
scripts/: inspect_h5.py  read_parquet.py
(+70 files in other folders)
